[tool.poetry]
name = "freeenterprise"
version = "4.6.0"
description = ""
authors = ["FF4FE Developers <ff4fe@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cherrypy = "^18.9.0"
pyaes = "^1.6.1"
python-dotenv = "^1.0.0"
pymongo = "^4.6.1"
jinja2 = "^3.1.2"
requests = "^2.31.0"
pillow = "^10.1.0"
chardet = "^5.2.0"
markdown = "^3.5.1"
javascripthon = "^0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
